--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,28 @@
 .env
 .DS_Store
 .idea/
-./data/gpt_generated_swift/
-./data/library_grammar_pairs.json
-credentials.json
-token.json
 ./swift_files/
 __pycache__/
 *.pyc
-analysis_results/
 data/
-input_label/
-output_label/
-output_label_split/
-input_label_split/
-jsonl/
-eval.jsonl
-alpaca_repaired.jsonl
-deepseek-coder-finetuned-16k/
-run.py
+dataTemp/
 temp/
+deepseek-coder-finetuned-16k/
 deepseek-coder-merged-16k/
-coreml_models/
 runPad/
 scripts/convert_to_model_coreml.py
 scripts/evaluate_model.py
+nCr_organized/
+llm_training_inputs/
+llm_training_raw_outputs/
+llm_training_data_validated/
+llm_training_data_split/
+swift_obfuscation_dataset.jsonl
+
+
+
+
+
 
 
 
