feat(split): CoT 관련 이슈로 input data split -> output generate and 원래 로직 backup

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ llm_training_raw_outputs/
 llm_training_data_validated/
 llm_training_data_split/
 swift_obfuscation_dataset.jsonl
+scripts/backup_no_split/evaluate_model.py
+scripts/backup_no_split/convert_to_model_coreml.py
+
+
 
 
 
